...
        "description": "Has never happened, no update etc."
    },
    "generalReconcile": "Reconciled",
    "@generalReconcile": {
        "description": "Booking has been confirmed/reconciled"
    },
    "generalReset": "Reset",
    "@generalReset": {
        "description": "Reset something (i.e. set filters)"
    },
    "generalSourceAccount": "Source Account",
    "@generalSourceAccount": {
        "description": "Source Account (of transaction)"
...
        "description": "Transfer transaction type"
    },
    "transactionTypeWithdrawal": "Withdrawal",
    "@transactionTypeWithdrawal": {
        "description": "Withdrawal transaction type"
    },
    "syncSettingsTitle": "Sync Settings",
    "@syncSettingsTitle": {
        "description": "Title for sync settings page"
    },
    "syncSettingsMobileDataTitle": "Sync on mobile data",
    "@syncSettingsMobileDataTitle": {
        "description": "Title for mobile data sync toggle"
...
